[package]
name = "surello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-jsonlines = "0.5.0"
serde_json = "1.0.108"
surrealdb = "1.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2.4.0"
